--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
                     </div>
                 </div>
 
-                <!-- Conversation Area -->
-                <div class="card mb-4">
-                    <div class="card-header">
+                <!-- Conversation Area (Dark Mode) -->
+                <div class="card mb-4 bg-dark text-light"></div>
+                    <div class="card-header bg-gradient" style="background: linear-gradient(135deg, #232526 0%, #414345 100%) !important; color: #fff;"></div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <h5 class="mb-0"><i class="fas fa-comments me-2"></i>LLM Agent POC Conversation</h5>
+                            <h5 class="mb-0"><i class="fas fa-comments me-2"></i>LLM Agent Conversation</h5>
                             <div class="d-flex align-items-center gap-3">
                                 <span class="message-count" id="message-count">0 messages</span>
                                 <button class="btn btn-clear btn-sm" id="clear-chat" title="Clear conversation">
@@ -326,9 +326,7 @@
             <div class="container">
                 <small>
                     <i class="fas fa-brain me-1"></i>
-                    LLM Agent POC - Intelligent Multi-Tool AI Assistant | 
-                    <a href="demo.html" class="text-decoration-none">View Demo</a> |
-                    <a href="test.html" class="text-decoration-none">Run Tests</a>
+                    LLM Agent POC - Intelligent Multi-Tool AI Assistant
                 </small>
                 <div class="mt-2">
                 </div>
